--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pachinko-allocation-model"
-version = "0.1.0"
+version = "0.1.3"
 description = "A probabilistic topic modeling approach inspired by Pachinko Allocation Model"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -21,8 +21,7 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/pachinko-allocation-model"
+Homepage = "https://github.com/dedsec-0010/pachinko-allocation-model"
 
-[tool.setuptools]
-packages = ["pachinko_allocation_model"]
-package-dir = {"": "src"}
+[tool.setuptools.packages.find]
+where = ["src"]
